--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="main-container">
          <div class="container1">
              <button onclick="typeNote()" class="btn btn-success">Create Note</button>
+             <button onclick="toggle()" class="btn btn-success">Toggle</button>
          </div>
          
          <div class="container2">
